2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala:
	* vala/valaelementaccess.vala:
	* gobject/Makefile.am:
	* gobject/valaccodebinding.vala:
	* gobject/valaccodeelementaccessmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:

	Add CCodeElementAccessModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala:
	* vala/valainvocationexpression.vala:
	* gobject/Makefile.am:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:
	* gobject/valaccodemodule.vala:

	Add CCodeInvocationExpressionModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala:
	* vala/valamemberaccess.vala:
	* gobject/Makefile.am:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valaccodemodule.vala:

	Add CCodeMemberAccessModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraycreationexpression.vala:
	* vala/valacodegenerator.vala:
	* gobject/Makefile.am:
	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodebinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:

	Add CCodeArrayModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodearraycreationexpressionbinding.vala:
	* gobject/valaccodeassignmentbinding.vala:
	* gobject/valaccodeelementaccessbinding.vala:
	* gobject/valaccodeexpressionbinding.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:
	* gobject/valaccodememberaccessbinding.vala:

	Remove CCodeExpressionBinding

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* vala/valacodegenerator.vala:
	* vala/valainterface.vala:
	* gobject/Makefile.am:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valagobjectclassmodule.vala:
	* gobject/valagobjectinterfacemodule.vala:

	Add GObjectClassModule and GObjectInterfaceModule

2008-10-24  Jürg Billeter  <j@bitron.ch>
